# Appazoid

./: .gitignore  .gitmodules  AppazoidConfig.h.in  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
Appazoid/: CMakeLists.txt
Appazoid/include/Appazoid/: Appazoid.h
Appazoid/include/Appazoid/UI/: Image.h  Layer.h  Texture.h  Widget.h
Appazoid/src/: EntryPoint.h
Appazoid/src/API/Vulkan/: Vulkan.cpp
Appazoid/src/ApplicationInterface/: Application.cpp  Application.h  ApplicationEntrypoint.cpp
Appazoid/src/ApplicationInterface/Window/: WindowHandler.cpp  WindowHandler.h  WindowStyle.h
Appazoid/src/Core/: AppazoidSpecification.h  Base.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  LayerStack.cpp  LayerStack.h  MemoryTracker.cpp  MemoryTracker.h  MouseCodes.h
Appazoid/src/Events/: Event.h
Appazoid/src/GUI/: Gui.cpp  Gui.h  ImGuiLayer.cpp
Appazoid/src/GUI/ImGuiBuild/: imguibuild.cpp
Appazoid/src/Graphics/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBufferLayout.h
Appazoid/src/Logging/: Log.cpp  Log.h
Appazoid/src/MemoryManagment/: MemoryTracker.h
Test/: CMakeLists.txt  main.cpp
Test/widgets/: FrameBufferWidget.h
include/Appazoid/: Appazoid.h
include/Appazoid/UI/: Image.h
scripts/: PythonConfig.py  build.bat  cli_setup.py  setup.py
scripts/useless/: script_for_flexing.py
src/API/Vulkan/: Vulkan.h
src/ApplicationInterface/: Application.cpp  ApplicationEntrypoint.cpp
src/ApplicationInterface/Window/: WindowHandler.cpp  WindowHandler.h  WindowStyle.h
src/Core/: Base.h  EntryPoint.h  LayerStack.h  PlatformDetection.h
src/Events/: ApplicationEvent.h  KeyEvent.h  MouseEvent.h
src/GUI/: Gui.h  ImGuiLayer.cpp  ImGuiLayer.h
src/GUI/ImGuiBuild/: imguibuild.cpp
src/Graphics/: FrameBuffer.cpp  FrameBuffer.h  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h
